tests/org.eclipse.php.core.tests/workspace/errors/php73/invalidHeredocIndentation5.pdtt
--TEST--
Bug 537608 - PHP 7.3 Support
--FILE--
<?php
echo <<<EOF
Comment1
 Comment2
  Comment2
   Comment2
    Comment2
    	Comment2
	Comment2
		Comment2
			Comment2
				Comment2
 	 Comment2
  	 Comment2
   	 Comment2
EOF;
?>
--EXPECT--
